--- a/index.html
+++ b/index.html
@@ -3,26 +3,80 @@
 <head>
 	<meta charset="UTF-8">
 	<title>My Resume</title>
-	<!--<link href="https://fonts.googleapis.com/css?family=Raleway:400,700" rel="stylesheet">-->
+	<link href="https://fonts.googleapis.com/css?family=Raleway:400,700" rel="stylesheet">
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/normalize.css">
 </head>
 <body>
 	<header class="header">
 		<p class="site-title-sub">Web designer's portfolio</p>
-		<h1 class="site-title">HI, MY NAME IS...</h1>
+		<h1 class="site-title">HI, MY NAME IS JEFF</h1>
 		<p class="site-description">Check out some of my works.</p>
+		<div class="buttons">
+			<a href="#about" class="button">LEARN MORE</a>
+			<a href="#contact" class="button button-showy">SEND MESSAGE</a>
+		</div>
 	</header>
-	<section class="about">
-		
+	<section class="about" id="about">
+		<h2 class="heading">ABOUT ME</h2>
+		<p class="about-text">
+		初次見面，您好。本人目前正在日本從事設計師的工作
+		。<br>我從專業的設計學校畢業之後，便到製作公司從事相關的工作，現在則是自行接案。
+		</p>
+		<p class="about-text">
+		這個網站是為了這本書而製作的範例網站，主要是展示著虛擬設計師的作品集。<br>
+		希望讀者透過從無到有製作這個範例網站的過程，可以學習到撰寫 HTML 及 CSS 程式碼的相關知識。	
+		</p>
 	</section>
 	<section class="works">
-		
+		<h2 class="heading">WORKS</h2>
+		<div class="works-wrapper">
+			<div class="work-box">
+				<img class="work-image" src="images/tree.jpg" alt="作品一">
+				<p class="work-text">
+					開始製作第一個案例。<br>
+					開始簡單的說明。<br>
+					使用的工具: <br>
+					<a href="#" class="button">READ MORE</a>	
+				</p>
+			</div>
+
+			<div class="work-box">
+				<img class="work-image" src="images/building.jpg" alt="作品二">
+				<p class="work-text">
+					開始製作第二個案例。<br>
+					開始簡單的說明。<br>
+					使用的工具: <br>
+					<a href="#" class="button">READ MORE</a>	
+				</p>
+			</div>
+
+			<div class="work-box">
+				<img class="work-image" src="images/lake.jpg" alt="作品三">
+				<p class="work-text">
+					開始製作第三個案例。<br>
+					開始簡單的說明。<br>
+					使用的工具: <br>
+					<a href="#" class="button">READ MORE</a>	
+				</p>
+			</div>
+
+			<div class="work-box">
+				<img class="work-image" src="images/sky.jpg" alt="作品四">
+				<p class="work-text">
+					開始製作第四個案例。<br>
+					開始簡單的說明。<br>
+					使用的工具: <br>
+					<a href="#" class="button">READ MORE</a>	
+				</p>
+			</div>
+
+		</div>
 	</section>
 	<section class="skills">
 		
 	</section>
-	<section class="contact">
+	<section class="contact" id="contact">
 		
 	</section>
 	<footer class="footer">
